test/tests/stages/11_long_integers/invalid_types/cast_lvalue.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[24]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(i)
  =
  const int(0)
  ;
  identifier(i)
  =
  (
  long
  )
  identifier(i)
  =
  const int(10)
  ;
  return
  const int(0)
  ;
  }
